--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
+<!DOCTYPE html>
 <html>
-    test
+    <head>
+        <meta charset="utf-8">
+        <title>Shunya's Blog</title>
+    </head>
+    <body>
+        <h1>リンク</h1>
+        <ul>
+            <li><a href="https://www.youtube.com/channel/UCozGStt1TTuGUFW61sK2HRA">YouTube</a></li>
+            <li><a href="https://twitter.com/PamiYummy">Twitter</a></li>
+            <li><a href="https://soundcloud.com/pimj_q">SoundCloud</a></li>
+            <li><a href="https://www.nicovideo.jp/user/93104277/video?ref=pc_userpage_menu">ニコニコ動画</a></li>
+            <li><a href="https://audiostock.jp/artists/54293">Audiostock</a></li>
+        </ul>
+        <h1>目次</h1>
+        <ul>
+            <li>NFT</li>
+            <li>音楽</li>
+        </ul>
+    </body>
 </html>
