--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>Shunya's Blog</title>
+        <link rel="stylesheet" href="https://github.com/shunyai/shunyai.github.io/blob/main/stylesheet.css">
     </head>
     <body>
-        <h1>リンク</h1>
-        <ul>
+        <h1 class="center">リンク</h1>
+        <ul class="center">
             <li><a href="https://www.youtube.com/channel/UCozGStt1TTuGUFW61sK2HRA">YouTube</a></li>
             <li><a href="https://twitter.com/PamiYummy">Twitter</a></li>
             <li><a href="https://soundcloud.com/pimj_q">SoundCloud</a></li>
             <li><a href="https://www.nicovideo.jp/user/93104277/video?ref=pc_userpage_menu">ニコニコ動画</a></li>
             <li><a href="https://audiostock.jp/artists/54293">Audiostock</a></li>
         </ul>
-        <h1>目次</h1>
-        <ul>
+        <h1 class="center">目次</h1>
+        <ul class="center">
             <li>NFT</li>
             <li>音楽</li>
         </ul>
