delete content of stylesheet.css and add a link

--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
         <link rel="stylesheet" href="https://github.com/shunyai/shunyai.github.io/blob/main/stylesheet.css">
     </head>
     <body>
-        <h1 class="center">リンク</h1>
-        <ul class="center">
+        <h1>サイト改装中</h1>
+        <h1>リンク</h1>
+        <ul>
             <li><a href="https://www.youtube.com/channel/UCozGStt1TTuGUFW61sK2HRA">YouTube</a></li>
             <li><a href="https://twitter.com/PamiYummy">Twitter</a></li>
             <li><a href="https://soundcloud.com/pimj_q">SoundCloud</a></li>
             <li><a href="https://www.nicovideo.jp/user/93104277/video?ref=pc_userpage_menu">ニコニコ動画</a></li>
             <li><a href="https://audiostock.jp/artists/54293">Audiostock</a></li>
+            <li><a href="https://opensea.io/Pami">OpenSea</a></li>
         </ul>
-        <h1 class="center">目次</h1>
-        <ul class="center">
+        <h1>目次</h1>
+        <ul>
             <li>NFT</li>
             <li>音楽</li>
         </ul>
